<resources>
    <string name="app_name">CityCare</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logodescription">Das Logo der App zeigt eine Stadt die von einer Glocke eingeschlossen wird.</string>
    <string name="welcome">Willkommen</string>
    <string name="welcometext">Bei CityCare können Sie, ganz einfach Schäden in ihrer Umgebung melden.</string>
    <string name="register">Registrierung</string>
    <string name="registertxt">Registriere dich mit einem Usernamen \nund einem Passwort. </string>
    <string name="backButton">Eine Seite zurück.</string>
    <string name="signIntxt">Anmelden</string>
    <string name="signUptxt">Registrieren</string>
    <string name="username">Username</string>
    <string name="password">Passwort</string>
    <string name="passwordrepeat">Bestätige dein Passwort</string>
    <string name="alreadyAccount">Du hast bereits \neinen Account?</string>
    <string name="signupTxt">Melde dich mit deinem Usernamen \nund deinem Passwort an.</string>
    <string name="Googletxt">Anmelden mit Google</string>
    <string name="Facebooktxt">Anmelden mit Facebook</string>
    <string name="profilDescription">Profil</string>
    <string name="nameDummy">Stefan Konrath</string>
    <string name="hauptstrasse_15">Hauptstraße 15</string>
    <string name="hauptstrasse_15_bexbach">Hauptstraße 15, Bexbach</string>
    <string name="_5_4844_23_444">5.4844, 23.444</string>
    <string name="etwas_hier_melden">Etwas hier melden</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strassenschaeden">Straßenschäden</string>
    <string name="RegisterGoogle">mit Google \n registrieren</string>
    <string name="signInGoogle">mit Google \n anmelden</string>
    <string name="meldeort">Meldeort</string>
    <string name="einstellungentxt">Einstellungen</string>
    <string name="reports">Aktuelle Meldungen</string>
    <string name="email">E-Mail-Adresse</string>
    <string name="logout">logout</string>
    <string name="reportTitle">Meldungstitel</string>
    <string name="descriptionHeader">Beschreibung</string>
    <string name="city">Zweibrücken</string>
    <string name="userReport">Max Mustermann</string>
    <string name="messages">Benachrichtigungen per E-Mail</string>
    <string name="settingsText">weitere Einstellungen sind \n in der Entwicklung...</string>
</resources>