<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterPage">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textColor="@color/dark_green"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/registertxt"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:background="@drawable/bg_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/EditTextStyle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="20sp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/EditTextStyle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20sp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameEditText" />


        <EditText
            android:id="@+id/passwordEditText"
            style="@style/EditTextStyle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20sp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <EditText
            android:id="@+id/passwordRepeatEditText"
            style="@style/EditTextStyle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/passwordrepeat"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <Button
            android:id="@+id/RegisterButton"
            style="@style/ButtonWithRoundedCorners"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/signUptxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepeatEditText" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/RegisterButton"
            tools:layout_editor_absoluteX="15dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyAccount"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/SignInButtonRegisterView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/loginView"
                />

            <Button
                android:id="@+id/SignInButtonRegisterView"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/signIntxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@id/loginView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/GoogleRegisterLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/loginView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            style="@style/ButtonWithRoundedCorners">

            <TextView
                android:id="@+id/textViewGoogleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegisterGoogle"
                app:layout_constraintEnd_toStartOf="@id/google_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/arrowRight"
                app:layout_constraintStart_toEndOf="@id/textViewGoogleRegister"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/png_google_icon" />

            <ImageView
                android:id="@+id/arrowRight"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:rotation="180"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/google_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>