<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poiinformations_dialog_background">


    <TextView
        android:id="@+id/adress"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/hauptstrasse_15"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adressInfos"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/hauptstrasse_15_bexbach"
        android:textColor="#7e8182"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/adress"
        app:layout_constraintTop_toBottomOf="@+id/adress" />

    <TextView
        android:id="@+id/koords"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/_5_4844_23_444"
        android:textColor="#7e8182"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/adress"
        app:layout_constraintTop_toBottomOf="@+id/adressInfos" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/adress"
        app:layout_constraintTop_toBottomOf="@+id/koords">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/report_button"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/etwas_hier_melden"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>