<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SignInPage">

    <TextView
        android:id="@+id/RegisterButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="30sp"
        android:text="@string/signUptxt"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:text="@string/signIntxt"
        android:textColor="@color/dark_green"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/signupTxt"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:background="@drawable/sign_in_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:background="@color/white"
            android:hint="@string/username"
            android:paddingStart="20sp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:paddingStart="20sp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/usernameEditText" />


        <Button
            android:id="@+id/SignUpButton"
            style="@style/ButtonWithRoundedCorners"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/signIntxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/SignUpButton"
            tools:layout_editor_absoluteX="15dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view">

            <Button
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/Googletxt"
                android:textColor="@color/dark_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>