<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile_dialog">

        <TextView
            android:id="@+id/headlineReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/bg_edittextcorner"
            android:backgroundTint="@color/illu_green"
            android:elevation="1dp"
            android:paddingStart="15sp"
            android:paddingTop="10sp"
            android:paddingEnd="15sp"
            android:paddingBottom="10sp"
            android:text="@string/reportTitle"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/reportImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/png_dummy"
            android:layout_margin="10dp"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_sign_in"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/detailsDescriptionHeader"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginTop="24sp"
            android:text="@string/descriptionHeader"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detailsLayout" />

        <ImageView
            android:id="@+id/iconReportDetail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30sp"
            android:scaleType="centerCrop"
            android:src="@drawable/png_dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionDetail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/detailsDescriptionHeader" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/city"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/userNameReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/userReport"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>